form validations and alert popups added

--- a/wemeet/templates/account/changepassword.html
+++ b/wemeet/templates/account/changepassword.html
@@ -8,16 +8,21 @@
 
 {% block content %}
 <!-- WRAPPER-->
+<style>
+    .error{
+        color:red;
+    }
+</style>
 <div class="content">
     <div class="page-login rlp">
         <div class="container">
             <div class="login-wrapper rlp-wrapper">
                 <div class="login-table rlp-table">
-                    <a href="../homepage/">
+                    <a href="{% url 'home' %}">
                         <img src="{% static 'assets/images/logo.png' %}" alt="Logo" style="width: 120px; height: 120px; margin-bottom: -20px;" class="login"/>
                     </a>
                     <div class="login-title rlp-title">Reset Password</div>
-                    <form method="POST" novalidate>
+                    <form method="POST" id="resetPassword">
                         {% csrf_token %}
                         <div class="login-form bg-w-form rlp-form">
                             <table>
@@ -25,7 +30,7 @@
                                     {% for field in form %}
                                     <div class="col-md-12">
                                         <label for="{{field.id_for_label}}" class="control-label form-label">{{field.label}} <span class="highlight">*</span></label>
-                                        {{field.errors}}
+                                        <span style="color: red;">{{field.errors}}</span>
                                         {{field}}
                                     </div>
                                     {% endfor %}
@@ -41,5 +46,47 @@
         </div>
     </div>
 </div>
+<script src="{% static 'assets/libs/validation/jquery.validate.js' %}"></script>
+<script>
+    $().ready(function() {
+        // validate form on keyup
+        $("#resetPassword").validate({
+            rules: {
+                old_password: {
+                    required: true,
+                    minlength: 8
+                },
+                new_password1: {
+                    required: true,
+                    minlength: 8
+                },
+                new_password2: {
+                    required: true,
+                    minlength: 8,
+                    equalTo: "#id_new_password1"
+                },
+            },
+            messages: {
+                old_password: {
+                    required: "This is a required field",
+                    minlength: "Your password must be at least 8 characters long"
+                },
+                new_password1: {
+                    required: "This is a required field",
+                    minlength: "Password must be at least 8 characters long"
+                },
+                new_password2: {
+                    required: "This is a required field",
+                    minlength: "Your password must be at least 8 characters long",
+                    equalTo: "Please enter the same password as above"
+                },
+            }
+        });
+    });
+
+    $('#id_old_password').addClass('form-control control-input');
+    $('#id_new_password1').addClass('form-control control-input');
+    $('#id_new_password2').addClass('form-control control-input');
+</script>
 {% endblock content %}
 {% block footer %}{% endblock footer %}
