--- a/wemeet/templates/account/forgot-password.html
+++ b/wemeet/templates/account/forgot-password.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% url 'home' as 'nav_home' %}
-{% block title %} Reset Password | {{block.super}} {% endblock %}
+{% block title %} Forgot Password | {{block.super}} {% endblock %}
 {% block topbar %}{% endblock topbar %}
 {% block navbar %}{% endblock navbar %}
 
