--- a/wemeet/templates/account/profile.html
+++ b/wemeet/templates/account/profile.html
@@ -12,17 +12,21 @@
     li label {
         padding-left: 20px;
     }
+    .error {
+        color:red;
+    }
 </style>
 <div class="section background-opacity page-title set-height-top">
     <div class="container">
-        <div class="page-title-wrapper"><!--.page-title-content--><h2 class="captions">profile</h2>
+        <div class="page-title-wrapper">
+            <h2 class="captions">profile</h2>
         </div>
     </div>
 </div>
 <div class="section section-padding profile-teacher">
     <div class="container">
         <div class="profile-teacher-wrapper">
-            <form method="post" enctype="multipart/form-data">
+            <form method="post" enctype="multipart/form-data" id="profileForm">
                 <div class="teacher-info">
                     <div class="staff-item2 customize">
                         {% csrf_token %}
@@ -52,11 +56,11 @@
                                     <div class="col-md-4" style="margin-top: 15px;">
                                         <label class="control-label form-label">alternate Email</label>
                                         {% if user.alternateEmail %}
-                                        <input type="text" name="alternateEmail" class="form-control form-input"
+                                        <input type="email" name="alternateEmail" class="form-control form-input"
                                         value="{{ user.alternateEmail }}" 
                                         id="id_alternateEmail">
                                         {% else %}
-                                        <input type="text" name="alternateEmail" class="form-control form-input"
+                                        <input type="email" name="alternateEmail" class="form-control form-input"
                                         id="id_alternateEmail">
                                         {% endif %}
 
@@ -64,22 +68,22 @@
                                     <div class="col-md-4" style="margin-top: 15px;">
                                         <label class="control-label form-label">Mobile: </label>
                                         {% if user.mobile %}
-                                        <input type="text" name="mobile" class="form-control form-input" value="{{ user.mobile }}" placeholder="9012345678" id="id_mobile">
+                                        <input type="text" name="mobile" class="form-control form-input" value="{{ user.mobile }}" id="id_mobile">
                                         {% else %}
-                                        <input type="text" name="mobile" class="form-control form-input" id="id_mobile">
+                                        <input type="text" name="mobile" placeholder="9012345678" class="form-control form-input" id="id_mobile" minlength="6000000000" max="9999999999">
                                         {% endif %}
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-md-4" style="margin-top: 15px;">
-                                        <label class="control-label form-label">First Name<span class="highlight">*</span></label>
+                                        <label for="id_firstName" class="control-label form-label">First Name<span class="highlight">*</span></label>
                                         <input type="text" name="firstName" class="form-control form-input" placeholder="John" value="{{ user.email.first_name }}" 
                                         maxlength="20" minlength="3" required id="id_firstName">
                                     </div>
                                     <div class="col-md-4" style="margin-top: 15px;">
-                                         <label for="id_lastName" class="control-label form-label">Last Name: <span class="highlight">*</span></label>
-                                        
-                                        <input type="text" name="lastName" class="form-control form-input col-md-3" placeholder="Doe" value="{{ user.email.last_name }}" maxlength="20" minlength="3" required id="id_lastName">
+                                        <label for="id_lastName" class="control-label form-label">Last Name<span class="highlight">*</span></label>
+                                        <input type="text" name="lastName" class="form-control form-input" placeholder="Doe" value="{{ user.email.last_name }}" 
+                                        maxlength="20" minlength="3" required id="id_lastName">
                                     </div>
                                     <div class="col-md-4" style="margin-top: 15px;">
                                         <label for="id_dob" class="control-label form-label">Date of Birth: </label>
@@ -126,16 +130,60 @@
         </div>
     </div>
 </div>
-<script>
-    let dateField = document.getElementById('id_dob');
-    let today = new Date();
-    let dd = String(today.getDate()).padStart(2, '0');
-    let mm = String(today.getMonth() + 1).padStart(2, '0');
-    let yyyy = today.getFullYear();
-    let maxDate = yyyy + '-' + mm + '-' + dd;
-    dateField.setAttribute('max', maxDate);
-    console.log(maxDate)
-</script>
+    <script src="{% static 'assets/libs/validation/jquery.validate.js' %}"></script>
+    <script>
+
+	$().ready(function() {
+        // validate form on keyup
+        $.validator.addMethod("letters", function(value, element) {
+            return this.optional(element) || value == value.match(/^[a-zA-Z\s]*$/);
+        });
+		$("#profileForm").validate({
+			rules: {
+				firstName: {
+                    required : true,
+                    letters : true,
+                    normalizer: function( value ) 
+                    {
+                        return $.trim( value );
+                    }
+                },
+                lastName: {
+                    required : true,
+                    letters : true,
+                    normalizer: function( value ) 
+                    {
+                        return $.trim( value );
+                    }
+                },
+				alternateEmail: {
+					required: false,
+					email: true,
+                },
+                mobile: {
+                    required: false,
+                    digits: true,
+                }
+			},
+			messages: {
+				firstName: "Please enter your first name",
+				lastName: "Please enter your last name",
+                alternateEmail: "Invalid email address",
+                mobile: 'Invalid Mobile Number'
+			}
+		});
+	});
+	</script>
+    <script>
+        let dateField = document.getElementById('id_dob');
+        let today = new Date();
+        let dd = String(today.getDate()).padStart(2, '0');
+        let mm = String(today.getMonth() + 1).padStart(2, '0');
+        let yyyy = today.getFullYear();
+        let maxDate = yyyy + '-' + mm + '-' + dd;
+        dateField.setAttribute('max', maxDate);
+        console.log(maxDate)
+    </script>
 {% endblock content %}
 {% block go_to_top %}{% endblock go_to_top %}
 {% block footer %}{% endblock footer %}
