--- a/wemeet/templates/board/boardDetails.html
+++ b/wemeet/templates/board/boardDetails.html
@@ -259,6 +259,7 @@
                                                 <tr class="heading-table">
                                                     <th class="col-4">Full Name</th>
                                                     <th class="col-4">Role</th>
+                                                    <th class="col-4">Status</th>
                                                 </tr>
                                                 </thead>
                                             </table>
@@ -280,10 +281,37 @@
                                                         {% if hasRight.VIEW_MEM_PER %}</a>{% endif %}
                                                     </td>
                                                     <td class="col-4">
-                                                        {% for role in member.roleId.all %}
-                                                             <span>{{ role.role }}</span>
-                                                        {% endfor %}
+                                                             <span>{{ member.role }}</span>
                                                     </td>
+                                                    <td class="col-4">
+                                                    {% if member.isAdmin == False %}
+                                                        {% if member.isRemoved == False %}
+                                                            {% if hasRight.MUTE_MEMBER %}
+                                                            {% if member.isMuted %}
+                                                                <span class="label label-primary">
+                                                                <a  style="color: white"  href="{% url 'unmute_people' boardMemberId=member.id %}" class="link-page">Unmute</a>
+                                                                </span>
+                                                            {% else %}
+                                                                <span  class="label label-default">
+                                                                <a href="{% url 'mute_people' boardMemberId=member.id %}" class="link-page" style="color: white">Mute</a>
+                                                                </span>
+                                                            {% endif %}
+                                                            {% endif %}
+                                                            {% if hasRight.REMOVE_MEMBER %}
+                                                            &nbsp;&nbsp;
+                                                            <span  class="label label-danger">
+                                                            <a  style="color: white" href="{% url 'remove_people' boardMemberId=member.id %}" class="link-page">
+                                                            Remove</a>
+                                                            </span>
+                                                            {% endif %}
+                                                        {% endif %}
+                                                    
+                                                    {% else %}
+                                                        <span class="link-page  label label-success" style="color: white">
+                                                        Admin
+                                                        </span>
+                                                    </td>
+                                                    {% endif %}
                                                 </tr>
                                                 {% endfor %}
                                                 </tbody>
