--- a/wemeet/templates/board/index.html
+++ b/wemeet/templates/board/index.html
@@ -4,6 +4,12 @@
 {% block topbar %} {% endblock %}
 {% block content %}
 {% load boardTags %}
+<style>
+    .test:after {
+        content: '\2807';
+        font-size: 25px;
+    }
+</style>
 <div class="section section-padding courses">
     <div class="container">
         
