--- a/wemeet/templates/board/peopleBoardDetails.html
+++ b/wemeet/templates/board/peopleBoardDetails.html
@@ -27,6 +27,21 @@
 						<div class="subtitle">
 								<span>{{ boardMember.role.role }}</span>
 						</div>
+						{% if hasRight.CHANGE_ROLE and boardMember.isAdmin == False %}
+						<div>
+							<form action="{% url 'change_role' boardMemberId=boardMember.id %}">
+							<label for="id_board_type" class="control-label form-label">Chage Role: <span class="highlight">*</span></label>
+		                    <select name="roleId" id="id_board_type" class="form-control form-input" required>
+		                        <option value="" disabled selected>Select Role</option>
+		                        {% for role in roles %}
+		                            <option value="{{ role.roleId }}">{{ role.role }}</option>
+		                        {% endfor %}
+		                    </select>
+		                    <br>
+		                    <button type="submit" class="btn btn-login btn-green" id="createButton"><span>Change</span></button>
+		                	</form>
+						</div>
+						{% endif %}
 					</div>
 			</div>
 		</div>
